// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matching Events 1`] = `
ZfsPool {
  "DATASETS": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "NAME": "testPool1",
  "PATH": "testPool1",
  "STATE_STR": "ACTIVE",
  "UID": "0x2D28F440E514007F",
}
`;

exports[`Matching Events 2`] = `
ZfsPool {
  "DATASETS": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "NAME": "testPool1",
  "PATH": "testPool1",
  "STATE_STR": "DESTROYED",
  "UID": "0x2D28F440E514007F",
}
`;

exports[`Matching Events 3`] = `
ZfsPool {
  "DATASETS": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "NAME": "testPool1",
  "PATH": "testPool1",
  "STATE_STR": "EXPORTED",
  "UID": "0x2D28F440E514007F",
}
`;

exports[`Matching Events 4`] = `
ZfsPool {
  "DATASETS": FableMap {
    "comparer": Comparer {
      "Compare": [Function],
    },
    "tree": MapTree {
      "data": undefined,
      "tag": 0,
    },
  },
  "NAME": "testPool1",
  "PATH": "testPool1",
  "STATE_STR": "ACTIVE",
  "UID": "0x2D28F440E514007F",
}
`;
